--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -41,4 +41,6 @@
   name = "github.com/golangci/golangci-lint"
   version = "1.6.1"
 
-required = ["github.com/golangci/golangci-lint/cmd/golangci-lint"]
+required = [
+    "github.com/golangci/golangci-lint/cmd/golangci-lint"
+    ]
